added login and register backend and fixed photo hanlding for categories

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,4 @@
 PORT=4000
 MONG_URI=mongodb+srv://teamsunsetcapstone:teamsunsetcapstone@marketplace.2ln8aoy.mongodb.net/?retryWrites=true&w=majority
+
+TOKEN_KEY="UCYCLE_TOKEN_KEY"
