--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "@aws-sdk/s3-request-presigner": "^3.554.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
